--- a/.gitignore
+++ b/.gitignore
@@ -39,9 +39,14 @@ bower_components
 build/Release
 
 # Dependency directories
-node_modules/
+frontend/node_modules/
+backend/node_modules/
+frontend/.env
+backend/.env
 jspm_packages/
-
+node_modules/
+.env
+.env.*
 # Snowpack dependency directory (https://snowpack.dev/)
 web_modules/
 
