feat: Add subscription functionality and comments section
- Added @headlessui/react dependency for UI components.
- Updated Sidebar component to include a new subscription link.
- Implemented UserChannel page to display subscription button.
- Enhanced WatchPage to show comments section and subscription status.
- Created AddComment and CommentList components for managing comments.
- Developed Subscription component to handle channel subscriptions.
- Updated Redux API slices for comments and subscriptions.
- Modified backend routes and controllers to support comments and subscriptions.
- Added new constants for comments and subscriptions URLs.

--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "nodemon": "^3.1.10"
   },
   "dependencies": {
+    "@headlessui/react": "^2.2.8",
     "@reduxjs/toolkit": "^2.9.0",
     "bcrypt": "^6.0.0",
     "cloudinary": "^2.7.0",
